--- a/devfile.yaml
+++ b/devfile.yaml
@@ -37,5 +37,6 @@ commands:
       component: anaconda
       # workingDir: ${PROJECTS_ROOT}/python-hello-world
       # commandLine: /bin/bash -c "    conda install jupyter -y --quiet &&     mkdir -p /opt/notebooks &&     jupyter notebook     --notebook-dir=/opt/notebooks --ip='*' --port=8888     --no-browser --allow-root"
+      commandLine: sleep 99999
       group:
         kind: run
