--- a/devfile.yaml
+++ b/devfile.yaml
@@ -34,4 +34,5 @@ components:
         protocol: https
         secure: true
         exposure: public
+        path: /thisisatest
       memoryLimit: 2G
